<resources>
    <string name="app_name">I am\'n Diary</string>
    <string name="action_settings">Settings</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="please_wait">Please Wait..</string>

    <!--Bottom Bar Items-->
    <string name="inbox">Inbox</string>
    <string name="diary">Diary</string>
    <string name="search">Search</string>
    <string name="profile">Profile</string>
    <!--Bottom Bar Items Ends Here-->

    <string name="email_validation">Please enter valid email.</string>
    <string name="first_name_validation">Please enter first name.</string>
    <string name="last_name_validation">Please enter last name.</string>
    <string name="phone_validation">Please enter UserName.</string>
    <string name="password_validation">Please enter password.</string>
    <string name="confirm_password_validation">Please re-enter password.</string>
    <string name="cpassword_validation">Password and confirm password not matched.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_people">People</string>
    <string name="text_events">Events</string>
    <string name="text_invite_friends">Invite friends to i\'m in</string>
    <string name="text_people_you_may_know">People you may know</string>
    <string name="text_follow">Follow</string>
    <string name="text_filter_by">Filter by area/location</string>
    <string name="text_some_popular_events">Some popular public events</string>
    <string name="text_create_event">Create an event</string>
    <string name="text_create_event_desc">So easy! Hint: You can get your friends to vote for the venue</string>
    <string name="text_find_a_time">Find a time that works</string>
    <string name="text_find_a_time_desc">Send multiple time slots and see when your friends are free</string>
    <string name="text_new_event">New event</string>
    <string name="text_create">Create</string>
    <string name="text_event_name">Event Name</string>
    <string name="text_event_place">Event Place</string>
    <string name="text_invite_friend">Invite Friends</string>
    <string name="text_time_and_date">Time &amp; date</string>
    <string name="text_all_day">All-day</string>
    <string name="text_starts">Starts</string>
    <string name="text_ends">Ends</string>
    <string name="text_public">Public</string>
    <string name="text_private">Private</string>
    <string name="text_event_type">Event Type</string>
    <string name="text_optional">Optional</string>
    <string name="text_upload_photo">Upload photo</string>
    <string name="text_description">Description</string>
    <string name="text_select_category">Select Category</string>
    <string name="text_send">Send</string>
    <string name="text_time_slot_one">Time Slot 1</string>
    <string name="text_time_slot_two">Time Slot 2</string>
    <string name="text_add_another_time_slot">Add another Time Slot</string>
    <string name="text_settings">Settings</string>
    <string name="text_profile">Profile</string>
    <string name="text_import_events">Import Events</string>
    <string name="text_edit_profile">Edit Profile</string>
    <string name="text_events_i_have_created">Events I\'ve created</string>
    <string name="text_my_birthday">My birthday</string>
    <string name="text_no_location">No Location</string>
    <string name="text_followers">Followers</string>
    <string name="text_following">Following</string>
    <string name="text_favorites">Favorites</string>
</resources>
