<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_create_event"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_gray"
    android:orientation="vertical"
    tools:context="com.mydiary.activity.CreateEvent">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/appColor">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/text_find_a_time"
            android:textColor="@color/white"
            android:textSize="20dp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_margin="15dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_send"
                android:textColor="@color/white"
                android:textSize="18dp" />
        </LinearLayout>

    </android.support.v7.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <EditText
                android:id="@+id/etEventName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/white_card_rounded_corner"
                android:drawableLeft="@drawable/ic_location_pin"
                android:drawablePadding="10dp"
                android:hint="@string/text_event_name"
                android:padding="10dp" />

            <TextView
                android:id="@+id/tvInviteFriends"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/white_card_rounded_corner"
                android:drawableLeft="@drawable/ic_location_pin"
                android:drawablePadding="10dp"
                android:drawableRight="@drawable/arrow_right"
                android:hint="@string/text_invite_friend"
                android:padding="10dp"
                android:textSize="18dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="10dp"
                android:text="@string/text_time_slot_one"
                android:textSize="18dp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/white_card_rounded_corner">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/text_all_day"
                    android:textSize="18dp" />

                <com.zcw.togglebutton.ToggleButton
                    android:layout_width="54dp"
                    android:layout_height="30dp"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="10dp"></com.zcw.togglebutton.ToggleButton>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/white_card_rounded_corner">

                <TextView
                    android:id="@+id/startDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_reminder"
                    android:drawablePadding="10dp"
                    android:hint="@string/text_starts"
                    android:padding="10dp"
                    android:textSize="18dp" />

                <TextView
                    android:id="@+id/tvStartDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_margin="10dp"
                    android:layout_toRightOf="@+id/startDate"
                    android:text="Sun 16 Apr 2018 2.30 PM"
                    android:textAlignment="center" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/white_card_rounded_corner">


                <TextView
                    android:id="@+id/endDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/white_card_rounded_corner"
                    android:drawableLeft="@drawable/ic_reminder"
                    android:drawablePadding="10dp"
                    android:hint="@string/text_ends"
                    android:padding="10dp"
                    android:textAlignment="center"
                    android:textSize="18dp" />

                <TextView
                    android:id="@+id/tvEndDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_margin="10dp"
                    android:layout_toRightOf="@+id/endDate"
                    android:text="Sun 16 Apr 2018 2.30 PM"
                    android:textAlignment="center" />

            </RelativeLayout>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="10dp"
                android:text="@string/text_time_slot_two"
                android:textSize="18dp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/white_card_rounded_corner">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/text_all_day"
                    android:textSize="18dp" />

                <com.zcw.togglebutton.ToggleButton
                    android:layout_width="54dp"
                    android:layout_height="30dp"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="10dp"></com.zcw.togglebutton.ToggleButton>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/white_card_rounded_corner">

                <TextView
                    android:id="@+id/startDateTwo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_reminder"
                    android:drawablePadding="10dp"
                    android:hint="@string/text_starts"
                    android:padding="10dp"
                    android:textSize="18dp" />

                <TextView
                    android:id="@+id/tvStartDateTwo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_margin="10dp"
                    android:layout_toRightOf="@+id/startDateTwo"
                    android:text="Sun 16 Apr 2018 2.30 PM"
                    android:textAlignment="center" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/white_card_rounded_corner">


                <TextView
                    android:id="@+id/endDateTwo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/white_card_rounded_corner"
                    android:drawableLeft="@drawable/ic_reminder"
                    android:drawablePadding="10dp"
                    android:hint="@string/text_ends"
                    android:padding="10dp"
                    android:textAlignment="center"
                    android:textSize="18dp" />

                <TextView
                    android:id="@+id/tvEndDateTwo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_margin="10dp"
                    android:layout_toRightOf="@+id/endDateTwo"
                    android:text="Sun 16 Apr 2018 2.30 PM"
                    android:textAlignment="center" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rlAddAnotherTimeSlot"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/slaty_card_rounded_corner">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_margin="20dp"
                    android:text="@string/text_add_another_time_slot"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:textSize="18dp" />

            </RelativeLayout>


        </LinearLayout>
    </ScrollView>
</LinearLayout>