<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.mydiary.fragment.SearchFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:background="@color/appColor"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.2" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_weight="0.7"
                    android:background="@drawable/white_rounded_corner"
                    android:orientation="horizontal"
                    android:weightSum="1">


                    <LinearLayout
                        android:id="@+id/llPeople"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5">

                        <TextView
                            android:id="@+id/tvPeople"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="5dp"
                            android:gravity="center_horizontal"
                            android:text="@string/text_people"
                            android:textColor="@color/text_selector"
                            android:textSize="16dp" />

                    </LinearLayout>

                    <View
                        android:layout_width="1dp"
                        android:layout_height="match_parent"
                        android:background="@color/white"></View>

                    <LinearLayout
                        android:id="@+id/llEvents"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5">

                        <TextView
                            android:id="@+id/tvEvents"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="5dp"
                            android:gravity="center_horizontal"
                            android:text="@string/text_events"
                            android:textColor="@color/text_selector"
                            android:textSize="16dp" />
                    </LinearLayout>

                </LinearLayout>

                <ImageView
                    android:id="@+id/ivAddSearch"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="15dp"
                    android:layout_weight="0.1"
                    android:src="@drawable/ic_plus" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:background="@drawable/edittext_white_rounded_corner"
                    android:drawableLeft="@drawable/ic_search"
                    android:drawablePadding="10dp"
                    android:hint="Search"
                    android:padding="5dp" />

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llViewPeople"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/gray"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/rlInviteFriends"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/green_bg_rounded_corner">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_margin="10dp"
                    android:text="@string/text_invite_friends"
                    android:textColor="@color/white"
                    android:textSize="16dp" />

            </RelativeLayout>

            <EditText
                android:id="@+id/etFilterBy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/location_edittext_bg"
                android:drawableLeft="@drawable/ic_location_cursor"
                android:drawablePadding="10dp"
                android:hint="@string/text_filter_by"
                android:padding="10dp" />

            <TextView
                android:id="@+id/tvPeopleListTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/text_people_you_may_know"
                android:textSize="16dp" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rvPeople"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"></android.support.v7.widget.RecyclerView>

        </LinearLayout>


    </LinearLayout>
</FrameLayout>
